--- a/pages/student/graduation-info.html
+++ b/pages/student/graduation-info.html
@@ -9,14 +9,14 @@
         <meta name="keywords" content="传智健康">
         <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
         <!-- 引入样式 -->
-        <link rel="stylesheet" href="../plugins/elementui/index.css">
-        <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../../plugins/elementui/index.css">
+        <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../css/style.css">
         <!-- 引入组件库 -->
-        <script type="text/javascript" src="../js/jquery.min.js"></script>
-        <script src="../js/vue.js"></script>
-        <script src="../plugins/elementui/index.js"></script>
-        <script src="../js/axios-0.18.0.js"></script>
+        <script type="text/javascript" src="../../js/jquery.min.js"></script>
+        <script src="../../js/vue.js"></script>
+        <script src="../../plugins/elementui/index.js"></script>
+        <script src="../../js/axios-0.18.0.js"></script>
         <style>
             .datatable {
                 position: relative;
@@ -44,11 +44,11 @@
     <body class="hold-transition">
         <div id="app">
             <div class="content-header">
-                <h1>毕业设计管理<small>添加毕业设计</small></h1>
+                <h1>毕业设计管理<small>查看已选毕设</small></h1>
                 <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
                     <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
                     <el-breadcrumb-item>毕业设计管理</el-breadcrumb-item>
-                    <el-breadcrumb-item>添加毕业设计</el-breadcrumb-item>
+                    <el-breadcrumb-item>查看已选毕设</el-breadcrumb-item>
                 </el-breadcrumb>
             </div>
             <div class="app-container">
@@ -337,7 +337,10 @@
                         this.pagination.total = res.data.total;//总数据量
                     });
                 },
-
+                // 重置表单
+                resetForm() {
+                    this.formData = {};
+                },
                 // 弹出添加窗口
                 handleCreate() {
                     this.resetForm();
@@ -398,11 +401,7 @@
                 },
                 // 删除
                 handleDelete(row) {
-                },
-                // 重置表单
-                resetForm() {
-                    this.formData = {};
-                },
+                }
             }
         })
     </script>
