--- a/pages/teacher/graduation-crud.html
+++ b/pages/teacher/graduation-crud.html
@@ -4,19 +4,19 @@
         <!-- 页面meta -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>毕业设计选题系统</title>
-        <meta name="description" content="毕业设计选题系统">
-        <meta name="keywords" content="毕业设计选题系统">
+        <title>传智健康</title>
+        <meta name="description" content="传智健康">
+        <meta name="keywords" content="传智健康">
         <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
         <!-- 引入样式 -->
-        <link rel="stylesheet" href="../plugins/elementui/index.css">
-        <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../../plugins/elementui/index.css">
+        <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../css/style.css">
         <!-- 引入组件库 -->
-        <script type="text/javascript" src="../js/jquery.min.js"></script>
-        <script src="../js/vue.js"></script>
-        <script src="../plugins/elementui/index.js"></script>
-        <script src="../js/axios-0.18.0.js"></script>
+        <script type="text/javascript" src="../../js/jquery.min.js"></script>
+        <script src="../../js/vue.js"></script>
+        <script src="../../plugins/elementui/index.js"></script>
+        <script src="../../js/axios-0.18.0.js"></script>
         <style>
             .datatable {
                 position: relative;
@@ -44,11 +44,11 @@
     <body class="hold-transition">
         <div id="app">
             <div class="content-header">
-                <h1>系统管理<small>教师管理</small></h1>
+                <h1>毕业设计管理<small>添加毕业设计</small></h1>
                 <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
                     <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
-                    <el-breadcrumb-item>系统管理</el-breadcrumb-item>
-                    <el-breadcrumb-item>教师管理</el-breadcrumb-item>
+                    <el-breadcrumb-item>毕业设计管理</el-breadcrumb-item>
+                    <el-breadcrumb-item>添加毕业设计</el-breadcrumb-item>
                 </el-breadcrumb>
             </div>
             <div class="app-container">
@@ -337,10 +337,7 @@
                         this.pagination.total = res.data.total;//总数据量
                     });
                 },
-                // 重置表单
-                resetForm() {
-                    this.formData = {};
-                },
+
                 // 弹出添加窗口
                 handleCreate() {
                     this.resetForm();
@@ -401,7 +398,11 @@
                 },
                 // 删除
                 handleDelete(row) {
-                }
+                },
+                // 重置表单
+                resetForm() {
+                    this.formData = {};
+                },
             }
         })
     </script>
