--- a/pages/admin/teacher-crud.html
+++ b/pages/admin/teacher-crud.html
@@ -9,14 +9,14 @@
     <meta name="keywords" content="毕业设计选题系统">
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="../plugins/elementui/index.css">
-    <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../plugins/elementui/index.css">
+    <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <!-- 引入组件库 -->
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script src="../js/vue.js"></script>
-    <script src="../plugins/elementui/index.js"></script>
-    <script src="../js/axios-0.18.0.js"></script>
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
+    <script src="../../js/vue.js"></script>
+    <script src="../../plugins/elementui/index.js"></script>
+    <script src="../../js/axios-0.18.0.js"></script>
     <style>
         .datatable {
             position: relative;
@@ -54,6 +54,23 @@
     </div>
     <div class="app-container">
         <div class="box">
+            <!--文件上传组件-->
+            <el-card class="box-card">
+                <div class="boxMain">
+                    <el-button style="margin-bottom: 20px;margin-right: 20px" type="primary" @click="downloadTemplate()">模板下载</el-button>
+                    <el-upload action="http://106.15.249.199:8083/topicsystem/admin/teachers/upload"
+                               name="file"
+                               :show-file-list="false"
+                               :on-success="handleSuccess"
+                               :before-upload="beforeUpload">
+                        <el-button style="margin-bottom: 20px;margin-right: 20px" type="primary">上传文件</el-button>
+                    </el-upload>
+                    <el-button style="margin-bottom: 20px;margin-right: 20px" type="primary" @click="downloadStudentsInfo()">导出所有教师信息</el-button>
+                </div>
+                <div>
+                    操作说明：请点击"模板下载"按钮获取模板文件，在模板文件中录入预约设置数据后点击"上传文件"按钮上传模板文件。
+                </div>
+            </el-card>
             <!--模糊查询组件以及新建按钮-->
             <div class="filter-container">
                 <el-input placeholder="教师姓名" v-model="pagination.queryString" style="width: 200px;" class="filter-item"
@@ -91,6 +108,7 @@
                 <el-dialog title="新增教师信息" :visible.sync="dialogFormVisible">
                     <el-form ref="dataAddForm" :model="formData" :rules="rules" label-position="right"
                              label-width="100px">
+
                         <el-row>
                             <el-col :span="12">
                                 <el-form-item label="用户名:" prop="username">
@@ -125,11 +143,11 @@
                                 </el-form-item>
                             </el-col>
                             <el-col :span="12">
-                                <el-form-item label="专业:" prop="major">
-                                    <el-select v-model="formData.major">
-                                        <el-option label="软件工程" value="软件工程"></el-option>
-                                        <el-option label="计算机科学与技术" value="计算机科学与技术"></el-option>
-                                        <el-option label="数字媒体技术" value="数字媒体技术"></el-option>
+                                <el-form-item label="学位:" prop="degree">
+                                    <el-select v-model="formData.degree">
+                                        <el-option label="博士" value="博士"></el-option>
+                                        <el-option label="硕士" value="硕士"></el-option>
+                                        <el-option label="博士后" value="博士后"></el-option>
 
                                     </el-select>
                                 </el-form-item>
@@ -156,11 +174,11 @@
                                     <el-input v-model="formData.username"/>
                                 </el-form-item>
                             </el-col>
-                            <el-col :span="12">
+               <!--             <el-col :span="12">
                                 <el-form-item label="密码:" prop="password">
                                     <el-input v-model="formData.password"/>
                                 </el-form-item>
-                            </el-col>
+                            </el-col>-->
                         </el-row>
                         <el-row>
                             <el-col :span="12">
@@ -184,11 +202,11 @@
                                 </el-form-item>
                             </el-col>
                             <el-col :span="12">
-                                <el-form-item label="专业:" prop="major">
-                                    <el-select v-model="formData.major">
-                                        <el-option label="软件工程" value="软件工程"></el-option>
-                                        <el-option label="计算机科学与技术" value="计算机科学与技术"></el-option>
-                                        <el-option label="数字媒体技术" value="数字媒体技术"></el-option>
+                                <el-form-item label="学位:" prop="degree">
+                                    <el-select v-model="formData.degree">
+                                        <el-option label="博士" value="博士"></el-option>
+                                        <el-option label="硕士" value="硕士"></el-option>
+                                        <el-option label="博士后" value="博士后"></el-option>
 
                                     </el-select>
                                 </el-form-item>
@@ -207,10 +225,10 @@
 </div>
 </body>
 <!-- 引入组件库 -->
-<script src="../js/vue.js"></script>
-<script src="../plugins/elementui/index.js"></script>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
-<script src="../js/axios-0.18.0.js"></script>
+<script src="../../js/vue.js"></script>
+<script src="../../plugins/elementui/index.js"></script>
+<script type="text/javascript" src="../../js/jquery.min.js"></script>
+<script src="../../js/axios-0.18.0.js"></script>
 <script>
     const vm = new Vue({
         el: "#app",
@@ -229,10 +247,8 @@
                     "username": "1702014118",
                     "gender": "男",
                     "age": 18,
-                    "major": "软件工程",
+                    "degree": "博士",
                     "realName": "杨佳豪",
-                    "firstWish": "1",
-                    "secondWish": "2",
                 },
 
             ], //当前页要展示的分页列表数据
@@ -250,8 +266,8 @@
                 gender: [
                     {required: true, message: "性别称为必填项", trigger: "blur"},
                 ],
-                major: [
-                    {required: true, message: "专业称为必填项", trigger: "blur"},
+                degree: [
+                    {required: true, message: "学位称为必填项", trigger: "blur"},
                 ],
                 age: [
                     {required: true, message: "年龄称为必填项", trigger: "blur"},
@@ -284,7 +300,7 @@
                 };
                 //向后台发送ajax请求
                 axios
-                    .post("http://106.15.249.199:8083/topicsystem/admin/students/list", pageInfo)
+                    .post("http://106.15.249.199:8083/topicsystem/admin/teachers/list", pageInfo)
                     .then((response) => {
                         //从后台响应回的数据中获取总记录数
                         this.pagination.total = response.data.data.total;
@@ -299,15 +315,15 @@
                     if (valid) {
                         this.dialogFormVisible = false;
                         axios
-                            .post("http://106.15.249.199:8083/topicsystem/admin/students/add", this.formData)
+                            .post("http://106.15.249.199:8083/topicsystem/admin/teachers/add", this.formData)
                             .then((response) => {
                                 if (response.data.code === 200) {
                                     this.$message({
                                         message: response.data.message,
-                                        type: "suceess",
+                                        type: "success",
                                     });
                                 } else {
-                                    this.$message.error("新增失败");
+                                    this.$message.error("新增失败：" + response.data.message);
                                 }
                             })
                             .finally(() => {
@@ -326,7 +342,7 @@
                 this.$refs["dataEditForm"].validate((valid) => {
                     if (valid) {
                         axios
-                            .put("http://106.15.249.199:8083/topicsystem/admin/students/update", this.formData)
+                            .put("http://106.15.249.199:8083/topicsystem/admin/teachers/update", this.formData)
                             .then((response) => {
                                 console.log(response)
                                 console.log(response.data)
@@ -353,19 +369,27 @@
             },
             // 删除
             handleDelete(row) {
-                this.$confirm("此操作将永久删除该文件, 是否继续?", "提示", {
-                    confirmButtonText: "确定",
-                    cancelButtonText: "取消",
-                    type: "warning",
+                console.log(row)
+                //需要交给后台的当前页信息
+
+                this.$confirm('此操作将永久删除该文件, 是否继续?', '提示', {
+                    confirmButtonText: '确定',
+                    cancelButtonText: '取消',
+                    type: 'warning',
+                    center: true,
                 })
                     .then(() => {
+                        const tid = {
+                            "id": row.id.toString(),
+                        };
                         axios
-                            .delete("http://106.15.249.199:8083/topicsystem/admin/students/del?id=" + row.id)
+                            .post(
+                                "http://106.15.249.199:8083/topicsystem/admin/teachers/del", tid)
                             .then((response) => {
                                 if (response.data.code === 200) {
                                     this.$message({
-                                        type: "success",
-                                        message: "删除成功!",
+                                        type: 'success',
+                                        message: '删除成功!'
                                     });
                                     this.findPage();
                                 } else {
@@ -395,7 +419,7 @@
                 this.dialogFormVisible4Edit = true;
                 //发送ajax请求回写数据
                 axios
-                    .get("http://106.15.249.199:8083/topicsystem/admin/students/" + row.id)
+                    .get("http://106.15.249.199:8083/topicsystem/admin/teachers/info/" + row.id)
                     .then((response) => {
                         //判断请求是否处理成功
                         if (response.data.code === 200) {
@@ -413,6 +437,40 @@
                 this.pagination.currentPage = currentPage;
                 this.findPage();
             },
+            //上传之前进行文件格式校验
+            beforeUpload(file){
+                const isXLS = file.type === 'application/vnd.ms-excel';
+                if(isXLS){
+                    return true;
+                }
+                const isXLSX = file.type === 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';
+                if (isXLSX) {
+                    return true;
+                }
+                this.$message.error('上传文件只能是xls或者xlsx格式!');
+                return false;
+            },
+            //下载模板文件
+            downloadTemplate(){
+                window.location.href="http://106.15.249.199:8083/topicsystem/admin/teachers/template";
+            },
+            //批量导出学生信息
+            downloadStudentsInfo(){
+                window.location.href="http://106.15.249.199:8083/topicsystem/admin/teachers/download";
+            },
+            //上传成功提示
+            handleSuccess(response) {
+                console.log(response);
+                if(response.code === 200){
+                    this.$message({
+                        message: response.message,
+                        type: 'success'
+                    });
+                }else{
+                    this.$message.error(response.message);
+                }
+            },
+
 
         },
     });
