--- a/pages/teacher/graduation-detail.html
+++ b/pages/teacher/graduation-detail.html
@@ -9,14 +9,14 @@
         <meta name="keywords" content="传智健康">
         <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
         <!-- 引入样式 -->
-        <link rel="stylesheet" href="../plugins/elementui/index.css">
-        <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../../plugins/elementui/index.css">
+        <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../css/style.css">
         <!-- 引入组件库 -->
-        <script type="text/javascript" src="../js/jquery.min.js"></script>
-        <script src="../js/vue.js"></script>
-        <script src="../plugins/elementui/index.js"></script>
-        <script src="../js/axios-0.18.0.js"></script>
+        <script type="text/javascript" src="../../js/jquery.min.js"></script>
+        <script src="../../js/vue.js"></script>
+        <script src="../../plugins/elementui/index.js"></script>
+        <script src="../../js/axios-0.18.0.js"></script>
         <style>
             .datatable {
                 position: relative;
