--- a/pages/student/graduation-info.html
+++ b/pages/student/graduation-info.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <!-- 页面meta -->
     <meta charset="utf-8">
@@ -84,11 +83,11 @@
                     </el-table-column>
                     <el-table-column align="center" label="操作：已通过的选题无法退选">
                         <template slot-scope="scope">
-                            <el-button @click="handleUpdate(scope.row)" size="mini" type="primary"
+                            <el-button @click="handleUpdate(scope.row)" size="mini" type="warning"
                                        v-if="scope.row.status=='审核中'">
-                                退选
+                                退选选题
                             </el-button>
-                            <el-button : @click="handleUpdate(scope.row)" size="mini" type="primary"
+                            <el-button @click="handleUpdate(scope.row)" size="mini" type="primary"
                                        v-if="scope.row.status=='已取消'">
                                 重新申请
                             </el-button>
@@ -105,6 +104,7 @@
         </div>
     </div>
 </div>
+</body>
 <!-- 引入组件库 -->
 <script src="../../js/vue.js"></script>
 <script src="../../plugins/elementui/index.js"></script>
@@ -127,7 +127,7 @@
         //钩子函数，VUE对象初始化完成后自动执行
         created() {
             this.findPage();
-            console.log(window.parent.passUserInfo().id);
+            // console.log(window.parent.passUserInfo().id);
         },
         watch: {
             'pagination.queryString': function () {
@@ -224,6 +224,4 @@
         }
     })
 </script>
-</body>
-
 </html>
